# Tidewalker

./: Cargo.toml  README.md
docs/: ROADMAP_REMAINING_WORK.md  SETUP_AND_TEST_GENERATION.md
src/: main.rs
src/commands/: generate.rs  mod.rs  run.rs  setup.rs  static_analysis.rs
src/commands/generate/: catalog.rs  chain.rs  expr_ast.rs  guards.rs  parser.rs  provision.rs  render.rs
src/commands/generate/guards/: detect.rs  plan.rs  render.rs
src/commands/generate/render/: coin.rs  container.rs  numeric.rs  option.rs  orchestrator.rs  ownership.rs  summary.rs  vector.rs
src/commands/generate/render/orchestrator/: helpers.rs  main_render.rs
tests/: generalization_guard.rs
