[package]
name = "Tidewalker"
version = "0.1.0"
edition = "2021"
description = "CLI to run Move package tests and observe/log state changes per test and function."

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
zstd = "0.13"
